# thinkingmesh

./: .gitignore  CLAUDE.md  Makefile  PROJECT_STATUS.md  README.md  defensive_disclosure.md  pyproject.toml  requirements.txt
thinkingmesh/: __init__.py
thinkingmesh/attr/: __init__.py  algebra.py  core.py  serialization.py
thinkingmesh/memory/: __init__.py  concepts.py  episodic.py  query.py  schemas.py  symbolic.py  working.py
